k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-tracker-svc
  namespace: expense-tracker
  labels:
    app: expense-tracker
spec:
  type: ClusterIP
  selector:
    app: expense-tracker
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
